syntax = "proto3";

package auth.v1;

import "google/api/annotations.proto";

option go_package = "./pb";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  }
  rpc ExchangeCode(ExchangeCodeRequest) returns (ExchangeCodeResponse) {
    option (google.api.http) = {
      post: "/v1/exchange-code"
      body: "*"
    };
  }
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse) {
    option (google.api.http) = {
      post: "/v1/verify"
      body: "*"
    };
  }
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/v1/refresh"
      body: "*"
    };
  }
  rpc RevokeToken(RevokeTokenRequest) returns (RevokeTokenResponse) {
    option (google.api.http) = {
      post: "/v1/revoke"
      body: "*"
    };
  }
}

message LoginRequest {
  string redirect_uri = 1;
}

message LoginResponse {
  string login_url = 1;
}

message ExchangeCodeRequest {
  string code = 1;
  string redirect_uri = 2;
}

message ExchangeCodeResponse {
  string user_id = 1;
  string access_token = 2;
}

message VerifyTokenRequest {}

message VerifyTokenResponse {
  string user_id = 1;
}

message RefreshTokenRequest {}

message RefreshTokenResponse {
  string access_token = 1;
}

message RevokeTokenRequest {}

message RevokeTokenResponse {}
